--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "TweenJS": "*",
+    "jquery-mousewheel": "~3.1.11",
+    "jquery": "~2.1.1",
+    "pixi.js": "~1.5.3"
+  }
 }
